// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchs snapshot 02 1`] = `
<div>
  <div
    className="sc-bdnxRM hhtRwE"
    data-testid="box"
  >
    save 02
  </div>
</div>
`;

exports[`matchs snapshot 1`] = `
<div>
  <div
    className="sc-bdnxRM hhtRwE"
    data-testid="box"
  >
    save
  </div>
</div>
`;
